# flow

./: Anchor.toml  README.md  package.json
app/: next.config.ts  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/create/: page.tsx
app/app/game/[id]/: page.tsx
app/scripts/: codama.ts
app/src/components/game/: CreateGameForm.tsx  GameBoard.tsx  GameLobby.tsx  PassButton.tsx  ScoreDisplay.tsx
app/src/components/price/: PriceChart.tsx
app/src/components/shell/: NavBar.tsx  StarField.tsx  Ticker.tsx  TxToast.tsx
app/src/components/wallet/: ConnectButton.tsx  WalletProvider.tsx
app/src/hooks/: useGame.ts  useOraclePrice.ts  useSession.ts
app/src/idl/: flow.json
app/src/lib/: anchor.ts  connections.ts  ix.ts  oracle.ts  pdas.ts  rpc.ts  scores.ts  session.ts
app/src/types/: game.ts
docs/: HOW_TO_PLAY.md  diagrams.md
programs/flow/: Cargo.toml
programs/flow/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/flow/src/instructions/: cancel_game.rs  commit_and_settle.rs  create_game.rs  delegate.rs  join_game.rs  mod.rs  pass.rs  settle.rs  start_game.rs  tick_price.rs
programs/flow/src/state/: game.rs  mod.rs  player.rs
tests/: cancelGame.ts  flow.ts
tests/helpers/: accounts.ts  connections.ts  log.ts  session.ts
