[package]
name = "flow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
ephemeral-rollups-sdk = { version = "0.8.8", features = ["anchor"] }
magicblock-magic-program-api = "0.8.8"
pyth-solana-receiver-sdk = "1.2.0"
session-keys = { version = "3.1.1", features = ["no-entrypoint"] }
bincode = "^1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
